--- a/index_1.4.html
+++ b/index_1.4.html
@@ -12,58 +12,67 @@
     <div class="fixed-container">
         <header class="header">
             <a href="#!" class="header__burger">
-                <img src="./img/svg/burger.svg" alt="Крест">
+                <div class="icon-circle">
+                    <img src="./img/svg/icon.svg" alt="Крестик">
+                </div>
             </a>
             <a href="#!" class="header__logo">
                 <img src="./img/svg/Group.svg" alt="Логотип">
             </a>
             <a href="#!" class="header__search">
-                <img src="./img/svg/search.svg" alt="Лупа">
+                <div class="icon-circle">
+                    <img src="./img/svg/icon2.svg" alt="Лупа">
+                </div>
             </a>
         </header>
 
-        <nav class="menu">
-            <nav class="menu">
-                <ul class="menu__vertical">
-                    <li class="menu__item">
-                        <div class="menu_border"></div>
-                        <a href="#">Ремонт техники</a>
-                    </li>
-                    <li><a href="#">Корпоративным клиентам</a></li>
-                    <li><a href="#">Продавцам техники</a></li>
-                    <li><a href="#">Партнерам</a></li>
-                    <li><a href="#">Производителям</a></li>
-                    <li><a href="#">Наши сервисные центры</a></li>
-                    <li><a href="#">Контакты</a></li>
-                </ul>
-            </nav>
+        <section class="menu">
+            <ul class="menu__vertical">
+                <li class="menu__item">
+                    <div class="menu_border"></div>
+                    <a href="#">Ремонт техники</a>
+                </li>
+                <li><a href="#">Корпоративным клиентам</a></li>
+                <li><a href="#">Продавцам техники</a></li>
+                <li><a href="#">Партнерам</a></li>
+                <li><a href="#">Производителям</a></li>
+                <li><a href="#">Наши сервисные центры</a></li>
+                <li><a href="#">Контакты</a></li>
+            </ul>
+        </section>
 
-            <footer>
-                <div class="contacts">
-                    <div class="contacts__icon">
-                        <a href="#!" class="contacts__icon__phone">
-                            <img src="./img/svg/chat copy.svg" alt="Телефон">
-                        </a>
-                        <a href="#!" class="contacts__icon__chat">
-                            <img src="./img/svg/chat.svg" alt="Чат">
-                        </a>
-                        <a href="#!" class="contacts__icon__profile">
-                            <img src="./img/svg/profile.svg" alt="Профиль">
-                        </a>
-                    </div>
-                    <div class="contacts__mail">
-                        <a href="mailto:mail@cps.com">mail@cps.com</a>
-                    </div>
-                    <div class="contacts__phone">
-                        8 800 890 8900
-                    </div>
-                    <div class="language-switcher">
-                        <span class="lang">RU</span>
-                        <span class="lang">EN</span>
-                        <span class="lang">CH</span>
-                    </div>
+        <footer>
+            <div class="contacts">
+                <div class="contacts__icon">
+                    <a href="#!" class="contacts__icon__phone">
+                        <div class="icon-circle">
+                            <img src="./img/svg/icon3.svg" alt="Телефон">
+                        </div>
+                    </a>
+                    <a href="#!" class="contacts__icon__chat">
+                        <div class="icon-circle">
+                            <img src="./img/svg/icon4.svg" alt="Чат">
+                        </div>
+                    </a>
+                    <a href="#!" class="contacts__icon__profile">
+                        <div class="icon-circle">
+                            <img src="./img/svg/Group 2.svg" alt="Профиль">
+                        </div>
+                    </a>
                 </div>
-            </footer>
+                <div class="contacts__mail">
+                    <a href="mailto:mail@cps.com">mail@cps.com</a>
+                </div>
+                <div class="contacts__phone">
+                    8 800 890 8900
+                </div>
+                <ul class="language-switcher">
+                    <li><button class="lang">RU</button></li>
+                    <li><button class="lang">EN</button></li>
+                    <li><button class="lang">CH</button></li>
+                </ul>
+            </div>
+        </footer>
     </div>
 </body>
 
